# agmip-monorepo

./: .gitignore  LICENSE  README.adoc  WORKSPACE  libs.versions.toml
.ijwb/: .bazelproject
libs/icasa-core/: build.gradle  settings.gradle
libs/icasa-core/docs/: design.md
libs/icasa-core/src/main/java/org/agmip/icasa/: IEntry.java  IcasaCode.java  IcasaCodeImmutableCollection.java  IcasaEntry.java  IcasaEntryImmutableCollection.java  IcasaLookup.java  IcasaLookupState.java
libs/icasa-core/src/test/java/org/agmip/icasa/: IcasaEntryImmutableCollectionTest.java  IcasaLookupTest.java  IcasaSampleData.java
libs/translator-core/: build.gradle  settings.gradle
libs/translator-core/src/main/java/org/agmip/ace/: AceEntry.java  AcePathfinder.java  Pathfinder.java
libs/translator-core/src/test/java/org/agmip/ace/: AcePathfinderTest.java
resources/icasa-mvl/: .gitignore  pom.xml  update-mvl.sh
resources/icasa-mvl/src/main/resources/icasa-mvl/: Climate_codes.csv  Explanatory_notes.csv  Management_info.csv  Measured_data.csv  Metadata.csv  Pest_codes.csv  Soils_data.csv  Weather_data.csv  crop_codes.csv  management_codes.csv  management_info.csv  measured_data.csv  metadata.csv  metadata_codes.csv  metadata_filter.csv  obs_pathfinder.csv  other_codes.csv  pathfinder.csv  soils_data.csv  weather_data.csv
translator-core/: BUILD.bazel
translator-salus/: BUILD.bazel
translator-salus/src/main/java/org/agmip/translators/app/: SalusApp.java
translator-salus/src/main/java/org/agmip/translators/salus/: SalusToAceWeather.java  SalusXmlWeatherHandler.java
(+20 files in other folders)
